# Taller1-2023-2c-Worms

./: .gitignore  CMakeLists.txt  README.md  client_config.cpp  event_handler.h
client/: CMakeLists.txt  client.cpp  client.h  client_defs.h  client_main.cpp
client/dumb_simple_client/: dumb_client.cpp  dumb_client.h  dumb_stage.h  one_worm_to_rule_them_all.h
client/game/: client_game_state.cpp  client_game_state.h  client_game_state_dto.h  game_loop.cpp  game_loop.h  game_turn_displayer.cpp  game_turn_displayer.h  icon.cpp  icon.h  ui_utils.cpp  utils_constants.cpp  utils_constants.h
client/game_display/: game_camera.cpp  game_camera.h  game_clock.h  game_display.cpp  game_display.h  game_displayable.h  game_resources_manager.cpp  game_resources_manager.h  game_sprite.cpp  game_sprite.h  game_sprite_info.cpp  game_sprite_info.h  game_sprite_manager.cpp  game_sprite_manager.h  game_timer.cpp  game_timer.h  game_weapon.cpp  game_weapon.h  game_worm_entity.cpp  game_worm_entity.h  sprite_keys.h
client/game_display/projectiles/: game_projectile_entity.cpp  game_projectile_entity.h  projectile_sprite_key_mapper.cpp  projectile_sprite_key_mapper.h
client/game_display/ui_elements/: game_camera.cpp  game_camera.h  game_sprite.cpp  game_sprite.h  game_sprite_info.cpp  game_sprite_info.h  game_text_display.cpp  game_text_display.h  game_ui_text.cpp  game_ui_text.h  game_worm_animation_set.cpp  game_worm_animation_set.h  sprite_animation.cpp  sprite_animation.h
client/game_display/worm/: game_worm_entity.cpp  game_worm_entity.h  worm_anim_key.h  worm_anim_key_mapper.cpp  worm_anim_key_mapper.h
client/game_managment/: client_config.h  client_console_lobby.cpp  client_console_lobby.h  client_console_parser.cpp  client_console_parser.h  client_receiver.cpp  client_receiver.h  client_request.cpp  client_request.h  client_sender.cpp  client_sender.h  cursor.h  event_handler.cpp  event_handler.h
client/game_managment/commands/: ChangeProjectileCountDownCommand.cpp  ChangeProjectileCountDownCommand.h  ChangeWeaponCommand.cpp  ChangeWeaponCommand.h  Command.cpp  Command.h  GameActionCommand.cpp  GameActionCommand.h  ShootCommand.cpp  ShootCommand.h  ToggleCheatCommand.cpp  ToggleCheatCommand.h
client/game_ui/: animation.cpp  animation.h  beam_state.cpp  beam_state.h  client_game_state.cpp  client_game_state.h  client_game_state_dto.h  drawable_integer.cpp  frame_selector.cpp  frame_selector.h  game_loop.cpp  game_loop.h  non_animation.cpp  sprite.cpp  sprite.h  sprites_manager.cpp  sprites_manager.h  ui_utils.h  worm_state.cpp  worm_state.h
client/launcher/: CMakeLists.txt  client_lobby.cpp  client_lobby.h  client_lobby_settings.cpp  client_lobby_settings.h  launcher.cpp  launcher.h  launcher.ui  lobby_parser.cpp  lobby_parser.h  main.cpp  main_console_lobby.cpp
client/poc_sdl/: Animation.cpp  Animation.h  CMakeLists.txt  Player.cpp  Player.h  animation.cpp  animation.h  client.cpp  client.h  client_defs.h  client_receiver.h  cursor.cpp  drawable_integer.h  event_handler.cpp  event_handler.h  example_sdl_events.cpp  frame_selector.cpp  frame_selector.h  game_loop.cpp  game_loop.h  non_animation.h  player_state.cpp  player_state.h  renderer_integer.cpp  renderer_integer.h  sprite.cpp  sprite.h  sprites_manager.cpp  sprites_manager.h
client/src/: client.cpp  client.h  client_main.cpp
client/src/model/: Worm.cpp  Worm.h
client/src/presentation/: EventHandler.cpp  EventHandler.h
client/src_aux/model/: Worm.h
common_base/: CMakeLists.txt  common_wrap_socket.cpp  constants.h  network_channel.cpp  network_channel.h  networking.h  protocol_consts.h  queue.h  roulete.h  thread.h
common_base/Game/: ActionTypeDto.h  CheatType.h  ExplosionDto.h  GameAction.h  GameEventType.h  GameWorldEventType.h  ProjectileCountDown.h  ProjectileDto.h  ProjectileTypeDto.h  ShotEvent.h  WeaponTypeDto.h  beam.h  beamDto.h  bullet.h  bulletDto.h  event.h  eventDto.h  game_clock.cpp  game_clock.h  game_info_dto.h  worm.h  wormDto.h
common_base/Networking/: connection_lost_exception.cpp  connection_lost_exception.h  net_buffer.cpp  net_buffer.h  net_channel.cpp  net_channel.h  net_operator.cpp  net_operator.h  net_protocol_interpreter.cpp  net_protocol_interpreter.h  socket_connection_lost_error.cpp  socket_connection_lost_error.h
common_base/Networking/Messages/: net_message.cpp  net_message.h  net_message_behaviour.h  net_message_chat.cpp  net_message_chat.h  net_message_create_game.cpp  net_message_create_game.h  net_message_create_game_response.cpp  net_message_create_game_response.h  net_message_dependencies.h  net_message_factory.cpp  net_message_factory.h  net_message_game_action.cpp  net_message_game_action.h  net_message_game_ended.cpp  net_message_game_ended.h  net_message_game_state_update.cpp  net_message_game_state_update.h  net_message_inform_id.cpp  net_message_inform_id.h  net_message_initial_game_state.cpp  net_message_initial_game_state.h  net_message_join_game.cpp  net_message_join_game.h  net_message_join_game_response.cpp  net_message_join_game_response.h  net_message_leave.cpp  net_message_leave.h  net_message_list_games.cpp  net_message_list_games.h  net_message_list_games_response.cpp  net_message_list_games_response.h  net_message_player_changed_projectile_countdown.cpp  net_message_player_changed_projectile_countdown.h  net_message_player_changed_weapon.cpp  net_message_player_changed_weapon.h  net_message_player_shot.cpp  net_message_player_shot.h  net_message_player_toggle_cheat.cpp  net_message_player_toggle_cheat.h  (+6 more)
common_base/Networking/dtos/: BeamScenarioData.h  GameScenarioData.h  HardcodedScenarioData.h  WormScenarioData.h
common_base/scenarios/: basic.yaml
server/: CMakeLists.txt  server.cpp  server.h  server_main.cpp
server/configs/: projectiles.yaml  turn_system.yaml  weapons.yaml  worms.yaml
server/game/control/: GameEngineInstance.cpp  GameEngineInstance.h  GameInstance.cpp  (+5 more)
server/main/: dumb_client.cpp  dumb_client.h  server.cpp  server.h
server/src/: GameInstance.cpp  GameInstance.h  dumb_client.cpp  dumb_client.h  host.cpp  host.h
(+411 files in other folders)
